--- a/views/addblog.ejs
+++ b/views/addblog.ejs
@@ -5,6 +5,8 @@
     </head>
     <body>
         <%- include('./partials/topbar.ejs') %>
+        <div class="main-content">
+
         <h2>Add Blog</h2>
         <form method="POST" action="/createblog" class="blog-form">
             <input type="text" name="title" placeholder="Enter Title here ..."></input>
@@ -19,7 +21,7 @@
         
 
 
-
+</div>
 
 
     </body>
