--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,21 +7,23 @@
     <body>
 
         <%- include('./partials/topbar.ejs') %>
+        <div class="main-content">
 
         <div class="signup-container">
-            <h2>Signup</h2>
+            <h2>Signup</h2><br/>
 
             <% if (message) { %>
                 <p class="error-message"><%= message %></p>
             <% } %>
 
-            <form method="POST" action="/register">
+            <form method="POST" action="/register" class="user-form">
                 <input type="text" name="name" placeholder="Enter your name" required />
-                <input type="email" name="email" placeholder="Enter your email" required />
-                <input type="password" name="password" placeholder="Enter your password" required />
-                <input type="submit" value="Signup" />
+                <br/><br/><input type="email" name="email" placeholder="Enter your email" required />
+                <br/><br/><input type="password" name="password" placeholder="Enter your password" required />
+                <br/><br/><input type="submit" value="Signup" class="submit" />
             </form>
         </div>
+    </div>
 
     </body>
 </html>
