--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
         <div class="signup-container">
             <div class="logsign">Login
             </div>
-        <form method="POST" action="http://localhost:3000/login" class="user-form">
+        <form method="POST" action="/login" class="user-form">
             <% if(message) {%>
                 <%= message %>
             <%}%><br/>
